[FIX] web: button show, hide field on listview being overridden by scrollbar

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -342,6 +342,7 @@
         text-align: center;
         line-height: 30px;
         z-index: 1; // must be over the resize handle
+        right: 2%;
     }
 
     .o_optional_columns {
